# ChangeLog for media-libs/libass
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Jul 2011; Steve Dibb <beandog@gentoo.org> libass-9999.ebuild:
  Add ~x86, ~amd64

*libass-9999 (18 May 2011)

  18 May 2011; Nikoli <nikoli@lavabit.com> +libass-9999.ebuild, +metadata.xml:
  initial live ebuild
