@@ -1,3 +1,3 @@
-EBUILD libass-9999.ebuild 887 RMD160 97eb0577f34684dcc873880a7a92ba4eed968f71 SHA1 cd15cf25545938d63086f240d910cbe84a0a5c37 SHA256 294daf4809bb0d3986b872e1ec8cbb543b0e6a3c81f291fd0460c13afc79637a
-MISC ChangeLog 335 RMD160 c189439d01d2ccdb9103416445ea8740ad569e93 SHA1 d7da9f723d0cea2766035c95bc3086b581af2662 SHA256 83922d2df6bc46fc8a7eb4d5110d8b17b5d09fb8292d81f5a88ca2f7fac8dfe7
+EBUILD libass-9999-r1.ebuild 810 RMD160 a9b7b50c62a4b495962b33ef5235587351da72c8 SHA1 9207c6038fc6a617005af8b684236a389a346d03 SHA256 73dab005576fa7a3874a915b78786d1d5cfbfc9fa0a3c14412e37a1d3ab2d9db
+MISC ChangeLog 491 RMD160 3dc70e1458dc7c943c5d051871778e605cb108b1 SHA1 a6d7741b6a0a33fa0463873b715f5ca58c069098 SHA256 b0ba9ad788c1d140ebaab21ab3c6e3ed62cb66d20c847874ba24f39fa9d477f7
 MISC metadata.xml 318 RMD160 04fbbbc2659e57cca01100801950aab20582f96f SHA1 e15ee10875cdaf0253ee9c11e8b1173a62fb0685 SHA256 3969751760d92f50b10c0e6379a34103d92d9e04baba5530d2f64093771b5717
