@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libass-9999-r1 (15 Jul 2011)
+
+  15 Jul 2011; Steve Dibb <beandog@gentoo.org> -libass-9999.ebuild,
+  +libass-9999-r1.ebuild:
+  Add dependency for harfbuzz
+
   15 Jul 2011; Steve Dibb <beandog@gentoo.org> libass-9999.ebuild:
   Add ~x86, ~amd64
 
